# dataeval-flow

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .readthedocs.yaml  .trivyignore  BRANCHING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.cu118  Dockerfile.cu124  Dockerfile.cu128  GEMINI.md  README.md  ROADMAP.md  SECURITY.md  cosign.pub  docker-compose.yml  entrypoint.sh  environment.yml  noxfile.py  pyproject.toml  requirements.txt  run.ps1  run.sh
.github/workflows/: docs.yml  publish.yml
.jupyter_cache/: global.db
.jupyter_cache/executed/154f52cd009178fd8badcb8c1115a911/: base.ipynb
.jupyter_cache/executed/369ca6fb1b2566386a6b0e1dcf663025/: base.ipynb
.jupyter_cache/executed/4159cdb4897056a57d0e611e470b44b6/: base.ipynb
.jupyter_cache/executed/44f6f26ebd69df8b58a0877896f837f5/: base.ipynb
.jupyter_cache/executed/47ce3f6cbdf2a471ece8e003b51de7d1/: base.ipynb
.jupyter_cache/executed/48f914f3fa674afa6e5eb0128e509270/: base.ipynb
.jupyter_cache/executed/4ed23504374917fdab738a6c217894be/: base.ipynb
.jupyter_cache/executed/a4ce265335aecd02e3bf7dd16af78385/: base.ipynb
.jupyter_cache/executed/bb7e7dfcdf43b9eb074e3c26a23e8fdc/: base.ipynb
.jupyter_cache/executed/fbdfcd5da26e37558643668f036207f1/: base.ipynb
config/: outputs.example.json  params.example.yaml  params.multi-dataset.example.yaml  params.schema.json  sync_schema.py
docker/: Dockerfile.cpu  Dockerfile.cu118  Dockerfile.cu124  Dockerfile.cu128  Dockerfile.j2  entrypoint.sh  generate.py  resolve-version.sh  variants.yaml
docs/: .markdown-link-check.json  CACHE_MANAGEMENT.md  check_notebook_cache.py  push-docs-cache.sh
docs/source/: conf.py  index.md
docs/source/_static/: custom.css
docs/source/concepts/: DataQualityAndCleaning.md  DatasetSplitting.md  DistributionShift.md  PreprocessingAndExtraction.md  Prioritization.md  Provenance.md  Reproducibility.md  index.md
docs/source/home/: changelog.md  installation.md
docs/source/how_to/: build_from_source.md  containerized_workflows.md  index.md  onnx_embeddings.md  torchvision_datasets.md
docs/source/notebooks/: classwise_drift.py  data_analysis.py  data_cleaning.py  data_cleaning.yaml  data_prioritization.py  dataset_splitting.py  drift_monitoring.py  onnx_embeddings.py  ood_detection.py  parameter_sweep.py  torchvision_datasets.py
docs/source/reference/: containers.md  glossary.md
docs/source/tutorials/: index.md
docs/superpowers/plans/: 2026-05-26-dataeval-flow-metarepo-groundwork.md
docs/superpowers/specs/: 2026-05-26-dataeval-flow-metarepo-groundwork-design.md
notebooks/: classwise_drift.ipynb  data_analysis.ipynb  data_cleaning.ipynb  data_coverage.ipynb  data_prioritization.ipynb  dataset_splitting.ipynb  drift_monitoring.ipynb  onnx_embeddings.ipynb  ood_detection.ipynb  parameter_sweep.ipynb  torchvision_datasets.ipynb
src/: container_run.py
src/dataeval_app/: __init__.py  __main__.py  _jatic_metadata.py  _logging.py  _metadata.py  cache.py  dataset.py  embeddings.py  metadata.py  preprocessing.py  runner.py  selection.py
src/dataeval_app/config/: __init__.py  _merge.py  loader.py  models.py
src/dataeval_app/factory/: __init__.py  tasks.py
src/dataeval_app/ingest/: __init__.py  config_loader.py  outputs.py  params.py
src/dataeval_app/utility/: __init__.py  preprocessing.py
src/dataeval_app/workflow/: __init__.py  _text_report.py  base.py  orchestrator.py
src/dataeval_flow/: __init__.py  __main__.py  _logging.py  cache.py  dataset.py  embeddings.py  metadata.py  preprocessing.py  preprocessors.py  runner.py  selection.py
src/dataeval_flow/_app/: __init__.py  app.py  cli.py
src/dataeval_flow/config/: __init__.py  _loader.py  _merge.py  _models.py  _paths.py  loader.py  models.py
src/dataeval_flow/workflow/: __init__.py  _text_report.py  base.py  orchestrator.py
src/dataeval_flow/workflows/: __init__.py
src/workflows/: inspect_dataset.py
tests/: __init__.py  conftest.py  test_cache.py  test_cleaning_builders.py  test_cleaning_report.py  test_cleaning_workflow.py  test_config_loader.py  test_config_schemas.py  test_container_run.py  test_data_analysis.py  test_dataset.py  test_drift_params.py  test_drift_report.py  test_drift_workflow.py  test_e2e.py  test_factory.py  test_ingest.py  test_logging.py  test_main_run.py  test_ood_report.py  test_ood_workflow.py  test_orchestrator.py  test_parameter_sweep_e2e.py  test_parameter_sweep_workflow.py  test_preprocessing.py  test_preprocessors.py  test_runner.py  test_splitting_report.py  test_splitting_workflow.py  test_text_report.py  test_utilities.py  test_workflow.py
tests/app/: conftest.py  test_app.py  test_cli.py  test_cli_full.py  test_core.py  test_detail_modal.py  test_discover.py  test_execution_state.py  test_introspect.py  test_main.py  test_modals_base.py  test_modals_params.py  test_modals_section_collect.py  test_modals_section_ui.py  test_model_logic.py  test_model_modal.py  test_pane_widgets.py  test_rendering.py  test_result_vm.py  test_section_modal.py  test_section_modal_coverage.py  test_settings_modal.py  test_viewmodels.py
verification/: conftest.py  fixtures.py  generate_metarepo.py  helpers.py  registry.yaml
verification/functional/: test_self.py
verification/functional/cache/: test_cache.py
verification/functional/cli/: test_cli_entrypoints.py
verification/functional/config/: test_config_load.py
verification/functional/contracts/: test_maite_entrypoints.py  test_public_api.py
verification/functional/dataset/: test_dataset_configs.py
verification/functional/docker/: test_dockerfile_present.py
verification/functional/extractors/: test_extractor_configs.py
verification/functional/install/: test_pip_install.py
verification/functional/metadata/: test_metadata_envelope.py
verification/functional/orchestration/: test_run_tasks.py
verification/functional/workflows/: test_drift.py  (+6 more)
verification/nonfunctional/: test_config_reproducibility.py  test_coverage_threshold.py  test_logging.py  test_type_safety.py
(+96 files in other folders)
